--- a/style.css
+++ b/style.css
@@ -61,9 +61,11 @@ nav>a:hover {
 }
 main {
     background-color: white;
-    margin: 0px 15%;
+    margin: auto;
+    max-width: 900px;
     box-shadow: 0px 0px 5px 0px;
     border-radius: 0px 0px 8px 8px;
+
     
 }
 
